--- a/custom_components/heatmaster_hassio/manifest.json
+++ b/custom_components/heatmaster_hassio/manifest.json
@@ -5,6 +5,7 @@
   "documentation": "",
   "dependencies": [],
   "codeowners": [],
-  "requirements": [],
+  "requirements": ["cachetools"],
   "iot_class": "local_polling",
+  "version": "0.0.1"
 }
